start adding error handling
